<resources>
    <string name="app_name">Rikaisya</string>
    <string name="rikai_quick">监听剪贴板</string>
    <string name="ocr_quick">ocr</string>
    <string name="action_settings">ocr设置</string>
    <string name="title_activity_OCRSettings">OCR 与翻译 设置</string>

    <string name="OCR_config_header">OCR相关配置</string>
    <string name="translate_config_header">翻译相关配置</string>

    <string name="baidu_OCR_config_title_API">百度OCR API key</string>
    <string name="baidu_OCR_config_title_Secret">百度OCR secret key</string>

    <string name="tencent_translate_id">腾讯翻译 API id</string>
    <string name="tencent_translate_key">腾讯翻译 API key</string>
    <string name="edit">编辑</string>
    <string name="quit">退出</string>
    <string name="autoTranslateSwitch">自动翻译</string>
    <string name="confirm">确认</string>
    <string name="editDialogTitle">编辑ocr结果</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="updateConfig">更新配置</string>
    <string name="accurateOCR">高精度OCR</string>
    <string name="foreNotificationChannelId">foreground</string>
    <string name="foreNotificationChannelName">正在截图通知</string>
    <string name="foreNotificationChannelDesc">OCR服务截图中的通知</string>
    <string name="trim">修剪</string>
    <string name="translating">翻译中…</string>
    <string name="OCRActive">OCR按钮已激活</string>
    <string name="clickStopOCR">点击停止OCR服务</string>
    <string name="rikaiClipboard">正在监听剪贴板</string>
    <string name="clickCloseRikai">点击关闭监听剪贴板</string>


</resources>